# ecomet-backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cloud_function/github/: client.py  parser.py  schemas.py  settings.py
parsers/github/: auth.py  client.py  main.py  parser.py
src/: main.py
src/api/routes/: activity.py  top100.py
src/core/: enums.py  exceptions.py  settings.py
src/core/di/: main.py
src/core/di/providers/: core.py  database.py  repository.py  service.py
src/models/: activity.py  repository.py
src/repository/: activity.py  base.py  top100.py
src/schemas/: repo.py
src/service/: activity.py  top_100.py
terraform/: main.tf  variables.tf  versions.tf
