[tool.poetry]
name = "ecomet-backend"
version = "0.1.0"
description = ""
authors = ["Timur Kerimov <tim-online@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
dishka = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "RUF001", "RUF002", "RUF003", "RUF012",
    "COM812", "ISC001",
    "D",
    "RET502", "RET503",
    "ANN401",
    "I001", "INP001",
    "FBT001", "FBT002",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
